book/tests/snapshots/snapshot__run_reference_prql@syntax-7.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-7.prql
---
SELECT
  DISTINCT department
FROM
  employees
