book/tests/snapshots/snapshot__run_reference_prql@syntax-8.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/syntax-8.prql
---
SELECT
  "first name"
FROM
  employees
