book/tests/snapshots/snapshot__run_reference_prql@window-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/window-0.prql
---
SELECT
  employees.*,
  SUM(paycheck) OVER (
    PARTITION BY employee_id
    ORDER BY
      month ROWS BETWEEN 5 PRECEDING
      AND UNBOUNDED FOLLOWING
  ) AS semi_annual_comp
FROM
  employees
