book/tests/snapshots/snapshot__run_reference_prql@window-4.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/transforms/window-4.prql
---
WITH table_1 AS (
  SELECT
    *,
    AVG(salary) OVER () AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1
WHERE
  salary < _expr_0
